# incigraph

./: .gitignore  CITATION.cff  DATA_LICENSE  LICENSE  README.md  pyproject.toml  requirements.txt  verify_install.py
app/: streamlit_app.py
figures/: build_hero.py  build_l3.py
notebooks/: 01_quickstart.ipynb  02_replicate_hero_figure.ipynb  03_replicate_l3_figure.ipynb
scripts/: collect_incigraph.py  curate_ordered_transition_candidates.py  incigraph_to_parquet.py  plot_incigraph.py
scripts/validation/: step1_aggregation_consistency.py  step2_sparsity_quantification.py  step3_contrast_scan.py
src/incigraph/: __init__.py  api.py  ci.py  disease_index.py
src/incigraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_ci.py  test_disease_index.py
